<resources>
    <string name="app_name">Cocktails9</string>
    <string name="cocktails">Cocktails\u0020</string>
    <string name="favorites">Favorites\u0020</string>
    <string name="profile">Profile\u0020</string>
    <string name="email">email\u0020</string>
    <string name="password">password\u0020</string>
    <string name="logout">Logout\u0020</string>
    <string name="intern2023">intern2023</string>
    <string name="example_levi9_com">example@levi9.com</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="type_in_cocktail_s_name">Type in cocktail\'s name</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="no_cocktails_found">No cocktails found.</string>
    <string name="cocktails_error">Error occurred while fetching data!</string>
    <string name="ok">OK</string>
    <string name="filter_cocktails_by">Filter cocktails by \u0020</string>
    <string name="filter_cocktails_by_specific">Filter cocktails by %1$s \u0020</string>
    <string-array name="filterList">
        <item>Alcoholic or not\u0020</item>
        <item>Category\u0020</item>
        <item>Glass used\u0020</item>
        <item>Ingredient\u0020</item>
    </string-array>
    <string name="other">Other\u0020</string>
    <string name="search_label">Search: %1$s \u0020</string>
    <string name="list">list</string>
    <string name="cocktail_name">%1$s \u0020</string>
    <string name="login"><b>Login</b>\u0020</string>
    <string name="loGin">Lo<b>Gin</b>\u0020</string>
    <string name="regiStar">Regi<b>Star</b>\u0020</string>
    <string name="register"><b>Register</b>\u0020</string>
    <string name="or">or\u0020</string>
    <string name="name">name\u0020</string>
    <string name="successfully_registered">You are successfully registered!\u0020</string>
    <string name="invalid_name">Invalid name!\u0020</string>
    <string name="invalid_email">Invalid email!\u0020</string>
    <string name="password_validation">Password must have at least 6 characters, one letter and one number!\u0020</string>
    <string name="email_validation_empty">Email cannot be empty!\u0020</string>
    <string name="password_validation_empty">Password cannot be empty!\u0020</string>
    <string name="not_registered">You are not registered!\u0020</string>
    <string name="welcome_back">Welcome back %1$s \u0020</string>
    <string name="registered">You are already registered! \u0020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category:</string>
    <string name="icon">Icon</string>
    <string name="glass_type">Glass type:</string>
    <string name="beer">Beer</string>
    <string name="beer_glass">Beer glass</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
</resources>